# piper

./: .gitignore  Cargo.toml  DEPLOYMENT.md
.cargo/: config.toml
.github/workflows/: firmware.yml
crsf-proto/: Cargo.toml
crsf-proto/src/: lib.rs
drone-client/: .dockerignore  Makefile  S95skypulse  main.cpp  skypulse.conf
drone-client/drop/: Dockerfile  Makefile  README.md  build.sh
drone-client/drop/br-ext-chip-sigmastar/configs/: ssc30kq_skypulse_defconfig  ssc338q_skypulse_defconfig
drone-client/drop/general/overlay/etc/network/interfaces.d/: wwan0
drone-client/drop/general/package/all-patches/libffi/: 0005-configure-do-not-use-TARGET-env-as-builddir.patch
drone-client/drop/general/package/msposd-prebuilt/: Config.in  msposd-prebuilt.mk
drone-client/drop/general/package/msposd-prebuilt/files/: S96msposd  msposd.conf
drone-client/drop/general/package/skypulse/: Config.in  skypulse.mk
drone-client/drop/general/package/skypulse/files/: S97skypulse  skypulse.conf
drone-client/drop/overlay/etc/: wireguard.conf
drone-client/drop/overlay/etc/init.d/: S97skypulse
drone-client/drop/overlay/etc/network/interfaces.d/: wg0
drone-client/drop/overlay/root/: config.txt
gcs/: Cargo.toml
gcs/src/: gamepad.rs  main.rs  state.rs  telemetry.rs  traccar.rs  video.rs  web.rs
gcs/static/: index.html
tools/: crsf-monitor.py  provision-camera.sh
